# fastapi_progect

./: .env-example  CRUD.py  README.md  main.py  models.py  pyproject.toml  settings.py
api/: api_router_user.py  general_routers.py  schemas_user.py
migrations/: env.py
migrations/versions/: 2024_02_10_1822-6eb27d6356a8_initial_user.py  2024_03_09_2224-7626b8f8201e_add_user_refresh_token.py  2024_03_12_1617-8dfc6e46e8ca_added_posts_and_comments_and_user_image.py  2024_03_12_1647-39e5d4490f4f_default_user_image_field.py  2024_03_12_2213-dde4b9166e87_remuved_nickname.py
templates/: add_post.html  base.html  change_password.html  edit_post.html  edit_profile.html  get_verification.html  index.html  login.html  new_password.html  registration.html  reset_password.html  template to copy.html  verify_account.html  view_profile.html
web/: web_router.py
