[tool.poetry]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = ["MatviSpivak <spivak.matvii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
fastapi = {extras = ["all"], version = "^0.109.2"}
passlib = "^1.7.4"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
sentry-sdk = {extras = ["fastapi"], version = "^1.40.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
